# pigman

./: .gitignore  Cargo.toml  JEPA_WORLD_MODEL_ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
affect/: __init__.py  curriculum.py  dynamics.py  engine.py  intrinsic_reward.py  policy.py  salience.py  state.py  trust.py
alignment/: __init__.py  dpo.py  preferences.py
benchmarks/: README.md  agent_benchmark.py
causal/: __init__.py  graph.py  interventions.py  learner.py
core/: __init__.py  checkpoint.py  config.py  ids.py  registry.py  tensor_types.py
data/: __init__.py  collators.py  schemas.py
dataset_engine/: __init__.py  quality.py  records.py  store.py
decoders/: __init__.py  action_decoder.py  text_decoder.py  tool_decoder.py
distributed/: __init__.py  config.py  launcher.py
docs/: CHAT_AND_FRONTIER_GAPS.md  EVALS.md  GENERAL_INTELLIGENCE_ROADMAP.md  LANGUAGE_STRATEGY.md  MANU_INTEGRATION.md  MASTER_PLAN.md  MEMORY.md  MODEL_BACKENDS.md  MULTI_AGENT.md  ROADMAP.md  TOOLS.md  VERIFIERS.md
dynamics/: __init__.py  latent_state.py  rollout.py  transition_model.py
encoders/: __init__.py  base.py  file_encoder.py  fusion.py  registry.py  text_encoder.py  tool_trace_encoder.py
evals/: __init__.py  affect_eval.py  agent_eval.py  memory_eval.py  multi_agent_eval.py  neural_eval.py  planner_eval.py  tool_eval.py  verifier_eval.py  world_model_prediction.py
examples/: smoke_agent.py
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_semantic.json  GRAPH_REPORT.md  graph.canvas  graph.html  graph.json
interfaces/: __init__.py  (+1 more)
(+1062 files in other folders)
