[project]
name = "jepa-world-agent"
version = "0.1.0"
description = "JEPA-first world model agent research scaffold"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "torch>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = [
  "affect",
  "alignment",
  "causal",
  "core",
  "data",
  "dataset_engine",
  "decoders",
  "distributed",
  "dynamics",
  "encoders",
  "evals",
  "examples",
  "interfaces",
  "jepa",
  "kernels",
  "memory",
  "multi_agent",
  "multimodal_stack",
  "neural",
  "torch_backend",
  "orchestration",
  "planner",
  "policies",
  "routing",
  "scripts",
  "security",
  "serving",
  "serving_api",
  "simulators",
  "safety_frontier",
  "state",
  "storage",
  "telemetry",
  "tools",
  "training",
  "training.distributed",
  "training.loops",
  "training.objectives",
  "training.optimizers",
  "verifiers",
  "world_model",
]
